Bug 1342810 - Check for instantiation failure when a previously-loaded module is requested r=smaug